fixed placeholder alignment

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -441,13 +441,12 @@ ul.custom-dot
 		bottom: 0px
 		left: 24px
 		top: 5px
-		z-index: 1
+		z-index: 10
 		transition: bottom 0.3s, font-size 0.3s
 
 	.placeholder-shift
 		font-size: 0.7em
 		top: -18px
-		z-index: 10
 
 	button
 		padding: 8px 14px
